--- a/Blog/Views/Home/ListCategories.cshtml
+++ b/Blog/Views/Home/ListCategories.cshtml
@@ -37,6 +37,21 @@
     <div class="myCloud x13"></div>
     <div class="myCloud x14"></div>
     <div class="myCloud x15"></div>
+    <div class="myCloud x16"></div>
+    <div class="myCloud x17"></div>
+    <div class="myCloud x18"></div>
+    <div class="myCloud x19"></div>
+    <div class="myCloud x20"></div>
+    <div class="myCloud x21"></div>
+    <div class="myCloud x22"></div>
+    <div class="myCloud x23"></div>
+    <div class="myCloud x24"></div>
+    <div class="myCloud x25"></div>
+    <div class="myCloud x26"></div>
+    <div class="myCloud x27"></div>
+    <div class="myCloud x28"></div>
+    <div class="myCloud x29"></div>
+    <div class="myCloud x30"></div>
 </div>
 }
 else
