--- a/Blog/Views/Shared/_Layout.cshtml
+++ b/Blog/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                 @Html.ActionLink("SHARE YOUR FRIENDS", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
                 @if (Request.IsAuthenticated)
                 {
-                @Html.ActionLink("15 Facts", "Index", "Slider", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("15 Facts for Programmers", "Index", "Slider", new { area = "" }, new { @class = "navbar-brand" })
                 }
             </div>
             <div class="navbar-collapse collapse">
