--- a/Blog/Views/Shared/_LoginPartial.cshtml
+++ b/Blog/Views/Shared/_LoginPartial.cshtml
@@ -22,7 +22,7 @@
         }
        
         <li>
-            @Html.ActionLink("Create", "Create", "Article")
+            @Html.ActionLink("Create New Post", "Create", "Article")
         </li>
         <li>
             @{
