--- a/Blog/Views/Manage/ManageLogins.cshtml
+++ b/Blog/Views/Manage/ManageLogins.cshtml
@@ -11,10 +11,10 @@
     var loginProviders = Context.GetOwinContext().Authentication.GetExternalAuthenticationTypes();
     if (loginProviders.Count() == 0) {
         <div>
-            <p>
-                There are no external authentication services configured. See <a href="http://go.microsoft.com/fwlink/?LinkId=313242">this article</a>
-                for details on setting up this ASP.NET application to support logging in via external services.
-            </p>
+            <p>@*
+    There are no external authentication services configured. See <a href="http://go.microsoft.com/fwlink/?LinkId=313242">this article</a>
+    for details on setting up this ASP.NET application to support logging in via external services.
+            *@This parts of out web site "Share your friends" is under construction. Please visit new month or next year </p>
         </div>
     }
     else
