Repaird user delete function and added profile picture on View/Tag/List

--- a/Blog/Views/AboutUs/Index.cshtml
+++ b/Blog/Views/AboutUs/Index.cshtml
@@ -24,7 +24,7 @@
                 </p>
                 <h4>Who is Topcho</h4>
                 <div>
-                    Topcho is a cute little furry dog. The breed is unknown, it has only three legs, one eye does not see. In the past, the incident occurred and some reason an ear is cut. If you are wondering why it says "Topcho" because "Lucky" is not appropriate.
+                    Topcho is a cute little furry dog. The breed is unknown, it has only three legs, one eye does not see. In the past, the incident occurred and for some reason an ear is cut. If you are wondering why it says "Topcho", because "Lucky" is not appropriate.
                 </div>
 
             </article>
